fix text visibility

--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -28,7 +28,15 @@ main
     grid-template-rows: 3fr 1.3fr
     font-family: $font-stack
 
+.black-film
+    background: rgba(0,0,0,0.2)
+    position: relative
+    z-index: 3
+    height: 100%
+
 #city-bg
+    position: relative
+    z-index: 2
     .container
         width: 80%
         margin: 0 auto
